--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/adobe/pages#readme",
   "devDependencies": {
     "@adobe/eslint-config-helix": "1.1.5",
-    "@adobe/helix-fetch": "2.4.0",
+    "@adobe/helix-fetch": "^1.9.1",
     "@babel/core": "7.13.10",
     "@babel/eslint-parser": "7.13.10",
     "@typescript-eslint/eslint-plugin": "4.28.4",
@@ -57,11 +57,12 @@
   },
   "dependencies": {
     "chai": "^4.3.4",
-    "karma": "6.3.4",
+    "karma": "^6.4.2",
     "karma-chai": "0.1.0",
     "karma-chrome-launcher": "3.1.0",
     "karma-mocha": "2.0.1",
     "karma-mocha-reporter": "2.2.5",
+    "lint": "^1.1.2",
     "mocha": "^9.1.0"
   }
 }
